--- a/src/styles/components/_hamburgerMenu.scss
+++ b/src/styles/components/_hamburgerMenu.scss
@@ -54,7 +54,7 @@
       ul {
         opacity: 1;
         visibility: visible;
-        transform: translateX(-60px);
+        transform: translateX(-70px);
         transition: transform 0.3s ease;
       }
 
@@ -68,7 +68,7 @@
       padding: 0;
       opacity: 0;
       visibility: hidden;
-      margin-top: 70px;
+      margin-top: 50px;
     }
 
     li {
@@ -76,8 +76,7 @@
       font-family: $font2;
 
       &:hover {
-        font-size: 1.2rem;
-        transition: 0.7s ease;
+        color: $color-yellow;
       }
     }
 }
