--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,3 +2,5 @@
 @import "./components/logo";
 @import "./components/header";
 @import "./components/hamburgerMenu";
+@import "./components/section1";
+@import "./components/section2";
