--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -130,4 +130,48 @@ h6 {
 }
 .hamburger-menu li:hover {
   color: #F6AA1C;
+}
+
+.section-1 {
+  width: 90%;
+  border: 1px dashed #621708;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.section-1 h2 {
+  color: #621708;
+  font-family: "font-Allura", sans-serif;
+  font-size: 2rem;
+  margin-top: 40px;
+}
+.section-1 span img {
+  width: 30px;
+  height: 30px;
+  margin-bottom: 40px;
+}
+.section-1 p {
+  width: 80%;
+  text-align: center;
+  font-family: "font-roboto", serif;
+  font-size: 0.9rem;
+  letter-spacing: 0.5px;
+}
+.section-1 img {
+  width: 80px;
+  height: 80px;
+  margin: 40px 0;
+  border-radius: 50%;
+}
+.section-1 h3 {
+  font-family: "font-roboto", serif;
+  margin-bottom: 40px;
+}
+
+.slide-container {
+  background: #21201e;
 }/*# sourceMappingURL=index.css.map */
