--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,8 @@
 @import "./components/hamburgerMenu";
 @import "./components/section1";
 @import "./components/section2";
+@import "./components/menus";
+@import "./components/lunch";
+@import "./components/diner";
+@import "./components/drinks";
+@import "./pages/home";
