--- a/src/styles/components/_lunch.scss
+++ b/src/styles/components/_lunch.scss
@@ -3,6 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: $color-white;
+    border: 1px dashed $color-orange;
 
     h1 {
         font-size: 2rem;
@@ -33,12 +35,28 @@
         img {
             height: 70px;
             width: 70px;
+            display: block;
         }
 
         div {
             margin-left: 15px;
             justify-content: center;
         }
+    }
+
+    h4 {
+        font-family: $font-1;
+        font-size: 1.2rem;
+        margin-bottom: 20px;
+    }
+
+    button {
+        cursor: pointer;
+        border: 1px solid $color-yellow;
+        border-radius: 10px;
+        padding: 10px;
+        margin-bottom: 20px;
+        color: $color-orange;
     }
 
     
