--- a/src/styles/components/_menus.scss
+++ b/src/styles/components/_menus.scss
@@ -18,77 +18,77 @@
     }
 }
 
-.navMenu {
-    width: 80%;
+.container {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    flex-direction: column;
+    position: relative;
+    width: 90%;
     margin: 0 auto;
-    margin-bottom: 20px;
+    margin-top: 30px;
+    
 
-    a {
-        padding: 5px;
-
-        &:hover {
-            transition: 0.6s;
-            transform: scale(1.1);
-        }
+    .bloc-tabs {
+        display: flex;
 
         button {
-            cursor: pointer;
-            border: none;
-            font-size: 1.5rem;
-            transition: 0.6s;
-            font-family: $font-1;
-            background: rgba(0, 0, 0, 0.548);
-            border-radius: 10px;
+            border: none;  
             color: $color-yellow;
-            padding: 5px;
-            margin-top: 30px;
-        }     
-    }
-
-    .nav-active {
-        position: relative;
+            font-family: $font-1;
+            font-size: 1.7rem;
+        }
     
-        &::after {
-            content: "";
-            height: 4px;
-            width: 0;
-            background: $color-orange;
-            position: absolute;
-            border-radius: 10px;
-            bottom: 0px;
-            left: 50%;
-            transform: translateX(-50%);
-            -webkit-animation: anim 0.6s  ease forwards;
-            animation: anim 1s ease     forwards;
 
-            @-webkit-keyframes anim {
-                to {
-                  width: 100%;
+        .tabs {
+
+            padding: 15px;
+            text-align: center;
+            width: 50%;
+            background: rgba(0, 0, 0, 0.521);
+            cursor: pointer;
+            position: relative;
+        }
+        
+        .active-tabs {
+            position: relative;
+    
+            &::after {
+                content: "";
+                height: 3px;
+                width: 0;
+                position: absolute;
+                border-radius: 10px;
+                background: $color-orange;
+                bottom: 10px;
+                left: 50%;
+                transform: translateX(-50%);
+                -webkit-animation: anim 0.3s  ease forwards;
+                animation: anim 0.6s ease     forwards;
+
+                @-webkit-keyframes anim {
+                  to {
+                    width: 100%;
+                  }
+                }
+                @keyframes anim {
+                  to {
+                    width: 100%;
+                    }
                 }
             }
-
-            @keyframes anim {
-                to {
-                  width: 100%;
-                  }
-            }
-    
+            
+        }
+        
+    }
+               
+    .content-tabs {
+        .content {
+            display: none;
+        }
+          .active-content {
+            display: block;
         }
     }
-}
-
     
-
-.card {
-    width: 90%;
-    background: $color-white;
-
-    .dinerMenu, .drinkMenu {
-        display: none;
-    }
 }
 
 
