--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -3,15 +3,15 @@
     background: url(../../img/bg.jpg) center/cover;
 
     nav {
-        width: 80%;
+        width: 100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
         position: fixed;
         top: 0;
-        left: 10%;
         background: rgba(0, 0, 0, 0.548);
         margin: 0 auto;
+        z-index: 100;
     }
 }
 
