--- a/src/styles/components/_lunch.scss
+++ b/src/styles/components/_lunch.scss
@@ -32,10 +32,10 @@
         display: flex;
         align-items: center;
 
-        img {
-            height: 70px;
+        .reglageImg {
             width: 70px;
-            display: block;
+            height: 70px;
+            aspect-ratio: 1 / 1;
         }
 
         div {
