ajout horaire et formulaire

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,3 +10,5 @@
 @import "./components/drinks";
 @import "./pages/home";
 @import "./pages/cardMenu";
+@import "./components/timeOpen";
+@import "./components/form";
