--- a/src/styles/components/_diner.scss
+++ b/src/styles/components/_diner.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px dashed $color-orange;
+    border: 1px dashed $color-brown;
 
     h1 {
         font-size: 2rem;
