--- a/src/styles/components/_lunch.scss
+++ b/src/styles/components/_lunch.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     background: $color-white;
-    border: 1px dashed $color-orange;
+    border: 1px dashed $color-brown;
 
     h1 {
         font-size: 2rem;
