--- a/src/styles/components/_section2.scss
+++ b/src/styles/components/_section2.scss
@@ -1,6 +1,5 @@
 .slide-container {
-    background: $color-black;
-    
+    background: $color-black;    
 }
 
 .imgStyle {
@@ -10,5 +9,5 @@
     background-size: cover;
     height: 400px;
     width: 90%;
-    margin: 0 auto;
+    margin: 15px auto;
   };
