--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -14,6 +14,7 @@
         align-items: center;
         background: $color-white;
         margin: 10px;
+        border-radius: 5px;
 
         h2 {
             font-family: $font-1;
