--- a/src/styles/components/_menus.scss
+++ b/src/styles/components/_menus.scss
@@ -46,6 +46,7 @@
             background: rgba(0, 0, 0, 0.521);
             cursor: pointer;
             position: relative;
+            border-radius: 5px;
         }
         
         .active-tabs {
