--- a/src/styles/components/_hamburgerMenu.scss
+++ b/src/styles/components/_hamburgerMenu.scss
@@ -55,7 +55,7 @@
       ul {
         opacity: 1;
         visibility: visible;
-        transform: translateY(61%);
+        transform: translateY(63%);
         transition: transform 1.2s ease;
         background: rgba(0, 0, 0, 0.548);
         display: flex;
@@ -65,8 +65,8 @@
       }
 
       li {
-        padding: 8px;
         text-align: center;
+        padding: 5px;
       }
     }
 
@@ -77,9 +77,9 @@
       visibility: hidden;
     }
 
-    li {
+    a {
       color: $color-white;
-      font-family: $font2;
+      font-family: $font2; 
 
       &:hover {
         color: $color-yellow;
