--- a/src/styles/components/_section1.scss
+++ b/src/styles/components/_section1.scss
@@ -34,12 +34,15 @@
     img {
         width: 80px;
         height: 80px;
-        margin: 40px 0;
+        margin-top: 40px;
+        margin-bottom: 15px;
         border-radius: 50%;
     }
 
     h3 {
-        font-family: $font2;
+        font-family: $font-1;
         margin-bottom: 40px;
+        font-weight: lighter;
+        font-size: 1.3rem;
     }
 }
