--- a/src/styles/components/_drinks.scss
+++ b/src/styles/components/_drinks.scss
@@ -4,59 +4,93 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px dashed $color-brown;
+    border-radius: 5px;
 
-    h1 {
-        font-size: 2rem;
-        font-family: $font-1;
-        color: $color-orange;
-        margin: 20px 0;
-    }
-
-    h2 {
+    .borderDrink {
         display: flex;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
+        width: 90%;
+        border: 1px dashed $color-brown;
         margin: 20px 0;
-        border-bottom: 1px solid $color-yellow;
-    }
 
-    .order-boissons {
-        width: 90%;
-    }
+        @media screen and (min-width: 680px){
+            width: 70%;
+        }
 
-    .boissons {
-        width: 90%;
-        display: flex;
-        margin: 0 auto;
-        justify-content: space-between;
-    }
+        h1 {
+            font-size: 2rem;
+            font-family: $font-1;
+            color: $color-orange;
+            margin: 20px 0;
 
-    p, h3 {
-        font-family: $font2;
-        font-size: 1rem;
-    }
+            @media screen and (min-width: 680px){
+                font-size: 2.8rem;
+            }
+        }
+    
+        h2 {
+            display: flex;
+            justify-content: center;
+            margin: 20px 0;
+            border-bottom: 1px solid $color-yellow;
 
-    p {
-        margin-left: 15px;
-    }
+            @media screen and (min-width: 680px){
+                font-size: 2.3rem;
+            }
+        }
+    
+        .order-boissons {
+            width: 90%;
+        }
+    
+        .boissons {
+            width: 90%;
+            display: flex;
+            margin: 0 auto;
+            justify-content: space-between;
+        }
+    
+        p, h3 {
+            font-family: $font2;
+            font-size: 1rem;
+        }
+    
+        p {
+            margin-left: 15px;
 
-    h3 {
-        margin-right: 15px;
-    }
+            @media screen and (min-width: 680px){
+                font-size: 1.2rem;
+            }
+        }
+    
+        h3 {
+            margin-right: 15px;
+        }
+    
+        h4 {
+            font-family: $font-1;
+            font-size: 1.2rem;
+            margin-bottom: 20px;
+        }
+    
+        button {
+            cursor: pointer;
+            border: 1px solid $color-yellow;
+            border-radius: 10px;
+            padding: 10px;
+            margin-bottom: 20px;
+            color: $color-orange;
 
-    h4 {
-        font-family: $font-1;
-        font-size: 1.2rem;
-        margin-bottom: 20px;
-    }
+            @media screen and (min-width: 680px){
+                font-size: 1.1rem;
+            }
 
-    button {
-        cursor: pointer;
-        border: 1px solid $color-yellow;
-        border-radius: 10px;
-        padding: 10px;
-        margin-bottom: 20px;
-        color: $color-orange;
+            @media screen and (min-width: 1000px){
+                font-size: 1.3rem;
+            }
+        }
     }
 }
 
