--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -4,6 +4,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border-top: 1px dashed $color-brown;
+
+    .footer-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        @media screen and (min-width: 1000px){
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+        }
+    }
 
     h2 {
         color: $color-orange;
@@ -16,24 +30,45 @@
 
     .text {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-    }
 
-    p {
-        width: 90%;
-        text-align: center;
-        color: $color-white;
+        @media screen and (min-width: 1000px){
+            width: 50%;
+        }
+
+        p {
+            width: 90%;
+            text-align: center;
+            color: $color-white;
+            margin-bottom: 20px;
+        }
     }
 
     .social {
         display: flex;
-        width: 70%;
-        justify-content: space-between;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         margin-bottom: 30px;
+
+        @media screen and (min-width: 1000px){
+            width: 50%;
+        }
+
+        .social-icons {
+            display: flex;
+            justify-content: space-between;
+        }
 
         i {
             font-size: 1.5rem;
+            margin: 0 20px;
+
+            @media screen and (min-width: 1000px){
+                margin: 0 50px;
+            }
         }
     }
 
