--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -6,15 +6,35 @@
     padding: 30px 0;
     background: $color-black;
 
+    @media screen and (min-width: 1000px){
+        padding: 0;
+    }
+
     .form-infos-container {
-        width: 90%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        width: 90%;  
         background: $color-white;
-        margin: 10px;
+        margin-top: 20px;
         border-radius: 5px;
+
+        @media screen and (min-width: 1000px){
+            height: 100%;
+            margin: 0;
+        }
+
+        .borderForm {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border: 1px dashed $color-brown;
+            border-radius: 5px;
+            width: 90%;
+            margin: 20px auto;
+
+            @media screen and (min-width: 1000px){
+               
+            }
+        }
 
         h2 {
             font-family: $font-1;
@@ -22,7 +42,7 @@
             font-weight: 100;
             color: $color-orange;
             text-align: center;
-            margin: 20px 0;
+            margin: 30px 0;
         }
       
         h3 {
@@ -40,10 +60,14 @@
             display: grid;
             grid-template-columns: 1fr;
             margin-bottom: 30px;
+
+            @media screen and (min-width: 620px){
+                grid-template-columns: 1fr 1fr;
+            }
       
             > * {
               padding: 10px 0;
-              margin: 10px 0;
+              margin: 10px;
               background: none;
               outline: none;
               border: none;
@@ -61,7 +85,12 @@
             font-weight: 700;
             cursor: pointer;
             transition: 0.2s;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
+
+            @media screen and (min-width: 1000px){
+                margin: 20px;
+                margin-bottom: 35px;
+            }
       
             &:hover {
               transform: scale(1.1);
