--- a/src/styles/components/_hamburgerMenu.scss
+++ b/src/styles/components/_hamburgerMenu.scss
@@ -10,6 +10,10 @@
     z-index: 100;
     transition: transform 0.9s ease;
     margin-right: 5px;
+
+    @media screen and (min-width: 1000px){
+      width: 80%;
+    }
   
     .line {
       position: absolute;
@@ -18,6 +22,10 @@
       border-radius: 5px;
       background-color: $color-white;
       transition: transform 0.9s ease;
+
+      @media screen and (min-width: 1000px){
+        display: none;
+      }
     }
   
     &:before,
@@ -29,6 +37,10 @@
       border-radius: 5px;
       background-color: $color-white;
       transition: transform 0.9s ease;
+
+      @media screen and (min-width: 1000px){
+        display: none;
+      }
     }
   
     &:before {
@@ -75,6 +87,18 @@
       padding: 0;
       opacity: 0;
       visibility: hidden;
+
+      @media screen and (min-width: 1000px) {
+        opacity: 1;
+        visibility: visible;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        li {
+          margin: 0 20px;
+        }
+      }
     }
 
     a {
