--- a/src/styles/components/_lunch.scss
+++ b/src/styles/components/_lunch.scss
@@ -1,65 +1,112 @@
-.lunchCard {
+.lunchCard {   
+    background: $color-white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: $color-white;
-    border: 1px dashed $color-brown;
+    border-radius: 5px;
 
-    h1 {
-        font-size: 2rem;
-        font-family: $font-1;
-        color: $color-orange;
-        margin: 30px 0;
-    }
-
-    p {
-        font-family: $font2;
-    }
-
-    h3 {
-        margin-top: 30px;
-        font-size: 2rem;
-    }
-
-    h2 {
-        border-bottom: 1px solid $color-yellow;
-        margin: 30px 0;
-    }
-
-    div {
-        width: 90%;
+    .borderLunch {
         display: flex;
+        flex-direction: column;
+        justify-content: center;
         align-items: center;
+        width: 90%;
+        border: 1px dashed $color-brown;
+        margin: 20px 0;
 
-        .reglageImg {
-            width: 70px;
-            height: 70px;
-            aspect-ratio: 1 / 1;
+        @media screen and (min-width: 680px){
+            width: 70%;
         }
 
-        div {
-            margin-left: 15px;
-            justify-content: center;
-        }
-    }
-
-    h4 {
-        font-family: $font-1;
-        font-size: 1.2rem;
-        margin-bottom: 20px;
-    }
-
-    button {
-        cursor: pointer;
-        border: 1px solid $color-yellow;
-        border-radius: 10px;
-        padding: 10px;
-        margin-bottom: 20px;
-        color: $color-orange;
-    }
-
+        h1 {
+            font-size: 2rem;
+            font-family: $font-1;
+            color: $color-orange;
+            margin: 30px 0;
     
+            @media screen and (min-width: 680px){
+                font-size: 2.8rem;
+            }
+        }
+    
+        p {
+            font-family: $font2;
+            text-align: center;
+    
+            @media screen and (min-width: 680px){
+                font-size: 1.2rem;
+            }
+        }
+    
+        h3 {
+            margin-top: 30px;
+            font-size: 2rem;
+    
+            @media screen and (min-width: 680px){
+                font-size: 2.3rem;
+            }
+        }
+    
+        h2 {
+            border-bottom: 1px solid $color-yellow;
+            margin: 30px 0;
+    
+            @media screen and (min-width: 680px){
+                font-size: 2.3rem;
+            }
+        }
+    
+        div {
+            width: 90%;
+            display: flex;
+            align-items: center;
+    
+            .reglageImg {
+                width: 70px;
+                height: 70px;
+                aspect-ratio: 1 / 1;
+                margin: 5px;
+    
+                @media screen and (min-width: 680px){
+                    width: 100px;
+                    height: 100px;
+                }
+    
+                @media screen and (min-width: 1000px){
+                    width: 150px;
+                    height: 150px;
+                }
+            }
+    
+            div {
+                margin-left: 15px;
+                justify-content: center;
+            }
+        }
+    
+        h4 {
+            font-family: $font-1;
+            font-size: 1.2rem;
+            margin-bottom: 20px;
+        }
+    
+        button {
+            cursor: pointer;
+            border: 1px solid $color-yellow;
+            border-radius: 10px;
+            padding: 10px;
+            margin-bottom: 20px;
+            color: $color-orange;
+    
+            @media screen and (min-width: 680px){
+                font-size: 1.1rem;
+            }
 
+            @media screen and (min-width: 1000px){
+                font-size: 1.3rem;
+            }
+        }
+    }
 }
 
