--- a/src/styles/components/_section1.scss
+++ b/src/styles/components/_section1.scss
@@ -1,5 +1,6 @@
 .section-1 {
     width: 90%;
+    background: $color-white;
     border: 1px dashed $color-brown;
     border-radius: 5px;
     display: flex;
