--- a/src/styles/components/_section2.scss
+++ b/src/styles/components/_section2.scss
@@ -7,7 +7,13 @@
     align-items: center;
     justify-content: center;
     background-size: cover;
+    border-radius: 5px;
     height: 400px;
     width: 90%;
     margin: 15px auto;
-  };
+
+    @media screen and (min-width: 625px){
+        height: 600px;
+    }
+
+}
