--- a/src/styles/components/_timeOpen.scss
+++ b/src/styles/components/_timeOpen.scss
@@ -10,6 +10,10 @@
         width: 90%;
         margin-top: 20px;
         border-radius: 5px;
+
+        @media screen and (min-width: 625px){
+            margin-top: 0;
+        }
         
         .border {
             display: flex;
@@ -19,7 +23,7 @@
             border: 1px dashed $color-brown;
             border-radius: 5px;
             width: 90%;
-            margin: 15px;
+            margin: 20px auto;
 
             h2 {
                 color: $color-orange;
@@ -28,6 +32,7 @@
                 border-bottom: 1px solid $color-yellow;
                 font-size: 2rem;
                 font-weight: lighter;
+
             }
         
             span {
@@ -40,11 +45,19 @@
                 margin: 40px 0;
                 border-bottom: 1px solid $color-yellow;
                 font-weight: lighter;
+
+                @media screen and (min-width: 625px){
+                    margin: 60px 0;
+                    font-size: 1.1rem;
+                }
             }
 
             p {
                 color: $color-white;
                 font-family: $font2;
+                @media screen and (min-width: 625px){
+                    font-size: 1rem;
+                }
             }
 
             .phone {
