--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,3 +1,23 @@
+
+.sections {
+  @media screen and (min-width: 1000px){
+    display: grid;
+    grid-template-columns: 50% 50%;
+    max-width: 1050px;
+    margin: 0 auto;
+  } 
+}
+
+.timeMenus {
+  background: $color-black;
+
+  @media screen and (min-width: 1000px){
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin: 20px auto;
+  }
+}
+
 .top {
     position: relative;
     
